Video bug on Safari fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,10 +193,10 @@ body {
 
 @media screen and (min-height: 710px) and (max-width: 600px) {
   .prev {
-    bottom: 7% !important;
+    bottom: 6% !important;
   }
   
   .next {
-    bottom: calc(7% + 50px) !important;
+    bottom: calc(6% + 50px) !important;
   }
 }
